fixing Animal z-index

--- a/src/components/Animal/Animal.scss
+++ b/src/components/Animal/Animal.scss
@@ -50,6 +50,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
+    z-index: 10;
     overflow-y: scroll;
 
     background-color: slate.$c1;
